; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_fw_init_one_p3.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/broadcom/bnxt/extr_bnxt.c_bnxt_fw_init_one_p3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bnxt = type { i32, i32, %struct.pci_dev* }
%struct.pci_dev = type { i32 }

@BNXT_FLAG_WOL_CAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bnxt*)* @bnxt_fw_init_one_p3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bnxt_fw_init_one_p3(%struct.bnxt* %0) #0 {
  %2 = alloca %struct.bnxt*, align 8
  %3 = alloca %struct.pci_dev*, align 8
  store %struct.bnxt* %0, %struct.bnxt** %2, align 8
  %4 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %5 = getelementptr inbounds %struct.bnxt, %struct.bnxt* %4, i32 0, i32 2
  %6 = load %struct.pci_dev*, %struct.pci_dev** %5, align 8
  store %struct.pci_dev* %6, %struct.pci_dev** %3, align 8
  %7 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %8 = call i32 @bnxt_set_dflt_rss_hash_type(%struct.bnxt* %7)
  %9 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %10 = call i32 @bnxt_set_dflt_rfs(%struct.bnxt* %9)
  %11 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %12 = call i32 @bnxt_get_wol_settings(%struct.bnxt* %11)
  %13 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %14 = getelementptr inbounds %struct.bnxt, %struct.bnxt* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* @BNXT_FLAG_WOL_CAP, align 4
  %17 = and i32 %15, %16
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %26

19:                                               ; preds = %1
  %20 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %21 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %20, i32 0, i32 0
  %22 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %23 = getelementptr inbounds %struct.bnxt, %struct.bnxt* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @device_set_wakeup_enable(i32* %21, i32 %24)
  br label %30

26:                                               ; preds = %1
  %27 = load %struct.pci_dev*, %struct.pci_dev** %3, align 8
  %28 = getelementptr inbounds %struct.pci_dev, %struct.pci_dev* %27, i32 0, i32 0
  %29 = call i32 @device_set_wakeup_capable(i32* %28, i32 0)
  br label %30

30:                                               ; preds = %26, %19
  %31 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %32 = call i32 (...) @cache_line_size()
  %33 = call i32 @bnxt_hwrm_set_cache_line_size(%struct.bnxt* %31, i32 %32)
  %34 = load %struct.bnxt*, %struct.bnxt** %2, align 8
  %35 = call i32 @bnxt_hwrm_coal_params_qcaps(%struct.bnxt* %34)
  ret void
}

declare dso_local i32 @bnxt_set_dflt_rss_hash_type(%struct.bnxt*) #1

declare dso_local i32 @bnxt_set_dflt_rfs(%struct.bnxt*) #1

declare dso_local i32 @bnxt_get_wol_settings(%struct.bnxt*) #1

declare dso_local i32 @device_set_wakeup_enable(i32*, i32) #1

declare dso_local i32 @device_set_wakeup_capable(i32*, i32) #1

declare dso_local i32 @bnxt_hwrm_set_cache_line_size(%struct.bnxt*, i32) #1

declare dso_local i32 @cache_line_size(...) #1

declare dso_local i32 @bnxt_hwrm_coal_params_qcaps(%struct.bnxt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
